Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <!-- HERO: portada + avatar + nombre + descripción + info (sin slider) -->
   <section id="hero" class="hero" aria-hidden="false">
     <div class="hero-cover">
+      <!-- id=cover es el elemento que usamos para aplicar parallax -->
       <img id="cover" class="cover-img" src="" alt="Portada" />
       <div class="cover-overlay"></div>
     </div>
@@ -64,24 +65,26 @@
     </div>
   </section>
 
-  <!-- Muro (éste es el único elemento scrollable) -->
+  <!-- Muro (éste es el contenedor fijo). Dentro existe .muro-scroll (el único que scrollea). -->
   <main id="muro" class="muro" role="main" aria-label="Muro de publicaciones">
-    <!-- pull-to-refresh (controlado por JS sobre #muro) -->
-    <div id="ptr" class="ptr" aria-hidden="true">
-      <div class="ptr-inner">
-        <span id="ptrIcon" class="material-symbols-outlined">expand_more</span>
-        <span id="ptrText">Desliza para actualizar</span>
-        <div id="ptrSpinner" class="ptr-spinner" aria-hidden="true"></div>
+    <div class="muro-scroll" id="muroScroll">
+      <!-- pull-to-refresh (controlado por JS sobre #muroScroll) -->
+      <div id="ptr" class="ptr" aria-hidden="true">
+        <div class="ptr-inner">
+          <span id="ptrIcon" class="material-symbols-outlined">expand_more</span>
+          <span id="ptrText">Desliza para actualizar</span>
+          <div id="ptrSpinner" class="ptr-spinner" aria-hidden="true"></div>
+        </div>
       </div>
-    </div>
 
-    <!-- Título sticky (quedará bajo la navbar) -->
-    <div class="muro-top">
-      <h3 class="muro-title"><span class="material-symbols-outlined">dynamic_feed</span> Publicaciones</h3>
-    </div>
+      <!-- Título sticky (quedará bajo la navbar) -->
+      <div class="muro-top">
+        <h3 class="muro-title"><span class="material-symbols-outlined">dynamic_feed</span> Publicaciones</h3>
+      </div>
 
-    <!-- Contenedor con las publicaciones (contenido que se desplaza) -->
-    <div id="posts" class="posts"></div>
+      <!-- Contenedor con las publicaciones (contenido que se desplaza) -->
+      <div id="posts" class="posts"></div>
+    </div>
   </main>
 
   <script src="script.js" defer></script>
