--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-  <!-- Material Symbols (Outlined wght 300) -->
+  <!-- Material Symbols -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@300" rel="stylesheet" />
 
   <link rel="manifest" href="manifest.json" />
@@ -27,22 +27,19 @@
   </nav>
   <div id="overlay" class="overlay" hidden></div>
 
-  <!-- Navbar fija -->
-  <header class="navbar" id="navbar" role="banner" aria-label="Barra superior">
-    <button id="menuBtn" class="icon-btn material-symbols-outlined" aria-label="Abrir menú">menu</button>
-
-    <div class="navbar-center" aria-hidden="false">
+  <!-- Navbar -->
+  <header class="navbar" id="navbar">
+    <button id="menuBtn" class="icon-btn material-symbols-outlined">menu</button>
+    <div class="navbar-center">
       <span id="usernameTop" class="username">@usuario</span>
-      <span id="verifiedTop" class="material-symbols-outlined verified" aria-hidden="true">verified</span>
+      <span id="verifiedTop" class="material-symbols-outlined verified">verified</span>
     </div>
-
-    <button id="themeToggle" class="icon-btn material-symbols-outlined" aria-label="Cambiar tema">dark_mode</button>
+    <button id="themeToggle" class="icon-btn material-symbols-outlined">dark_mode</button>
   </header>
 
-  <!-- HERO: portada + avatar + nombre + descripción + info (sin slider) -->
-  <section id="hero" class="hero" aria-hidden="false">
+  <!-- HERO -->
+  <section id="hero" class="hero">
     <div class="hero-cover">
-      <!-- id=cover es el elemento que usamos para aplicar parallax -->
       <img id="cover" class="cover-img" src="" alt="Portada" />
       <div class="cover-overlay"></div>
     </div>
@@ -52,39 +49,36 @@
         <img id="avatar" class="avatar" src="" alt="Foto de perfil" />
       </div>
 
-      <div class="perfil-text">
+      <div class="perfil-box">
         <h2 id="fullName" class="full-name">Nombre Apellido</h2>
         <p id="bio" class="bio">Descripción breve del usuario.</p>
-      </div>
 
-      <!-- Info extra: separado en left (location+web) y right (social icons) -->
-      <div id="infoBox" class="info-box" aria-label="Información adicional">
-        <div id="infoLeft" class="info-left"></div>
-        <div id="infoRight" class="info-right"></div>
+        <div id="infoBox" class="info-box">
+          <div id="infoLeft" class="info-left"></div>
+          <div id="infoRight" class="info-right"></div>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Muro (éste es el contenedor fijo). Dentro existe .muro-scroll (el único que scrollea). -->
-  <main id="muro" class="muro" role="main" aria-label="Muro de publicaciones">
-    <div class="muro-scroll" id="muroScroll">
-      <!-- pull-to-refresh (controlado por JS sobre #muroScroll) -->
-      <div id="ptr" class="ptr" aria-hidden="true">
-        <div class="ptr-inner">
-          <span id="ptrIcon" class="material-symbols-outlined">expand_more</span>
-          <span id="ptrText">Desliza para actualizar</span>
-          <div id="ptrSpinner" class="ptr-spinner" aria-hidden="true"></div>
-        </div>
+  <!-- MURO -->
+  <main id="muro" class="muro">
+    <div id="ptr" class="ptr">
+      <div class="ptr-inner">
+        <span id="ptrIcon" class="material-symbols-outlined">expand_more</span>
+        <span id="ptrText">Desliza para actualizar</span>
+        <div id="ptrSpinner" class="ptr-spinner"></div>
       </div>
-
-      <!-- Título sticky (quedará bajo la navbar) -->
-      <div class="muro-top">
-        <h3 class="muro-title"><span class="material-symbols-outlined">dynamic_feed</span> Publicaciones</h3>
-      </div>
-
-      <!-- Contenedor con las publicaciones (contenido que se desplaza) -->
-      <div id="posts" class="posts"></div>
     </div>
+
+    <div class="muro-top">
+      <h3 class="muro-title">
+        <span class="material-symbols-outlined">dynamic_feed</span>
+        Publicaciones
+      </h3>
+    </div>
+
+    <div id="posts" class="posts"></div>
   </main>
 
   <script src="script.js" defer></script>
