Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 <!-- Sección de publicaciones -->
 <main id="feed"></main>
 
-<script src="app.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
