Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>MyMMO - Offline Prototype</title>
+  <title>MyMMO - Offline</title>
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet"
